<resources>
    <string name="app_name">দুর্যোগ ব্যবস্থাপনা ও ত্রাণ মন্ত্রণালয়</string>
    <string name="government">গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="pdf_action">পিডিএফ বন্ধ করুন</string>



<!-- TODO: Remove or change this placeholder text -->
    <string name="minister_name">মোফাজ্জল হোসেন চৌধুরী মায়া বীর বিক্রম, এমপি</string>
    <string name="minister_position">মন্ত্রী, দুর্যোগ ব্যবস্থাপনা ও ত্রাণ মন্ত্রণালয়</string>
    <string name="minister_desc">জীবন-বৃত্তান্ত</string>
    <string name="minister_details">মোফাজ্জল হোসেন চৌধুরী মায়া বীর বিক্রম, এমপি, ১৯৭১ সালের জুন মাস। একদল গেরিলা যোদ্ধা রাজধানী ঢাকা শহরে ভয়াবহ আক্রমনের পরিকল্পণা করছে। এরা বাংলাদেশের স্বাধীনতা যুদ্ধকালীন ২ নং সেক্টরের ক্র্যাক প্লাটুন সদস্য। তাদের টার্গেট হোটেল ইন্টারকন্টিনেন্টালে অবস্থানরত বিদেশী পর্যটক, রাষ্ট্রদুত ও গণমাধ্যমকর্মীসহ বিশ্বের কাছে বাংলাদেশে চলমান ভয়াবহ মুক্তিযুদ্ধের বার্তা পৌছানো। একদিন দিনের আলো পেরিয়ে সন্ধ্যা ঘনিয়ে আসতেই ক্র্যাক প্লাটুন সদস্যদের বোমার ভয়াবহ শব্দে হোটেল ইন্টারকন্টিনেন্টালসহ আশেপাশের এলাকা প্রকম্পিত হয়ে উঠলো। বিশ্বের মানুষের কাছে বার্তা পৌছলো বাংলাদেশে মরণপণ মুক্তিযুদ্ধ চলছে। এ অপারেশনে যিনি নেতৃত্ব দিয়েছেন তিনি মোফাজ্জল হোসেন চৌধুরী মায়া, বীরবিক্রম, এমপি।\nমোফাজ্জল হোসেন চৌধুরী মায়া, বীরবিক্রম, এমপি ১৯৪৮ সালের ৩ ফেব্রুয়ারী চাঁদপুর জেলার মতলব উত্তর উপজেলার মোহনপুরের সম্ভ্রান্ত চৌধুরী পরিবারে জন্মগ্রহণ করেন। তাঁর পিতা-মরহুম আলী আহসান মিয়া, মাতা-মরহুমা মোসা: আক্তারুন্নেছা। জগন্নাথ বিশ্ববিদ্যালয় থেকে তিনি  রাষ্ট্রবিজ্ঞান ও ইসলামের ইতিহাসে এমএ পাশ করে পরে এলএলবি ডিগ্রী অর্জন করেন। সঙ্গীত পিপাসু মায়া চৌধুরী মিউজিক কলেজ থেকে আই মিউজিক পাশ করেন।\nজনাব চৌধুরী ১৯৬৫ সালে ছাত্র রাজনীতির মাধ্যমে রাজনৈতিক জীবন শুরু করেন। তৎকালিন পাকিস্তান আমলে তিনি বিভিন্ন ছাত্র আন্দোলনে সক্রিয়ভাবে অংশগ্রহণ  করেন। ১৯৭১ সালে জাতির পিতা বঙ্গবন্ধুর ডাকে মহান মুক্তিযুদ্ধে ঝাঁপিয়ে পড়েন। তিনি যুদ্ধকালীন ২ নং সেক্টরের ক্র্যাক প্লাটুনের কমান্ডার হিসেবে বীরত্বপূর্ণ দায়িত্ব পালন করেন। মুক্তিযুদ্ধে গুরুত্বপূর্ণ অবদানের জন্য তিনি ‘বীরবিক্রম’ খেতাব লাভ করেন।\nজনাব চৌধুরী ১৯৭২ সালে ঢাকা মহানগর আওয়ামীলীগের একজন একনিষ্ঠ নির্ভীক কর্মী হিসেবে পরিচিতি লাভ করেন। বর্তমানে তিনি ৪র্থ বারের মতো ঢাকা মহানগরের সাধারন সম্পাদক হিসেবে দায়িতব পালন করছেন। এর পাশাপাশি তিনি বাংলাদেশ আওয়ামীলীগের কেন্দ্রীয় কার্যকরী কমিটির সদস্য হিসেবে দায়িত্ব পালন করছেন। ১৯৭৯ সালে তিনি ঘাতক দালাল নির্মূল জাতীয় সমন্বয় কমিটির আহবায়ক ও স্টিয়ারিং কমিটির সদস্য ছিলেন। ১৯৭৫ সালের ১৫ আগস্টে জাতির পিতা বঙ্গবন্ধুকে স্বপরিবারে হত্যা করা করা হলে তার প্রতিবাদ করতে গিয়ে জাতীয় ৪ নেতার সাথে তিনিও গ্রেফতার হন। দীর্ঘ ৩ বছর কারারুদ্ধ থাকার পর হাইকোর্টে রীটের মাধ্যমে তিনি মুক্তি পান।\nমতলব উপজেলার বিখ্যাত চৌধুরী পরিবারের সদস্যগণ ও আত্মীয়-স্বজনরাই এ অঞ্চলে দীর্ঘদিন ধরে জনপ্রতিনিধি হিসেবে দায়িত্ব পালন করছেন। জনাব মায়া চৌধুরীর পিতা মরহুম আলী আহসান মিয়া জনপ্রতিনিধি হিসেবে দীর্ঘ ৩০ বছর মতলব উপজেলার মোহনপুর ইউনিয়নের নির্বাচিত চেয়ারম্যান ছিলেন। জনাব চৌধুরী ১৯৯৬ সালে ২৬১ চাঁদপুর-২ মতলব উত্তর থেকে প্রথমবার এবং ২০১৪ সালে একই আসন থেকে দ্বিতীয়বারের মত সংসদ সদস্য হিসেবে নির্বাচিত হন।\nমন্ত্রিসভার সদস্য হিসেবে তিনি ১৯৯৭ সালের ৩১ ডিসেম্বর স্থানীয় সরকার, পল্লী উন্নয়ন ও সমবায় প্রতিমন্ত্রী হিসেবে নিযুক্ত হন। ১৯৯৮-২০০১ সাল পর্যন্ত তিনি নৌ-পরিবহন প্রতিমন্ত্রী হিসেবে দায়িত্ব পালন করেন। বর্তমানে তিনি দুর্যোগ ব্যবস্থাপনা ও ত্রাণ মন্ত্রী হিসেবে দায়িত্ব পালন করছেন।একজন জনদরদী মানুষ হিসেবে মায়া চৌধুরী এলাকার একাধিক স্কুল-কলেজের প্রতিষ্ঠাতা। তিনি মতলব উত্তর উপজেলা, মতলব পৌরসভা ও ছেংগারচর পৌরসভার উদ্যোক্তা প্রতিষ্ঠাতা। তিনি একান্ত প্রচেষ্টায় মতলব উত্তর ও দক্ষিন উপজেলায় অনেক রাস্তাঘাট, পুল-কালভার্ট নির্মাণ করে এলাকার যোগাযোগ ব্যবস্থার উন্নয়নে বিশেষ ভূমিকা রেখেছেন।\nরাজনীতির পাশাপাশি জনাব মায়া চৌধুরী ব্যবসা-বাণিজ্যের সাথে যুক্ত রয়েছেন। ব্যক্তি জীবনে তিনি ২ ছেলে ও ১ মেয়ে সন্তানের জনক।</string>
    <string name="minister_info">১। জাতীয় পরিচয়পত্র নম্বর: ১৯৪৮২৬৯২৬১৮০০০০০২\n২। নির্বাচনী এলাকা : ২৬১, চাঁদপুর-২\n৩। জন্ম তারিখ : ০৩-০২-১৯৪৮ ইং\n৪। জন্মস্থান (জেলা) : চাঁদপুর\n৫। পিতার নাম : মৃত আলী আহম্মদ মিয়া\n৬। মাতার নাম : মৃত মোসা: আক্তারুন্নেস\n৭। সন্তান/ সন্ততি : \nক) সাজেদুল হোসেন চৌধুরী, জন্ম - ০১-০২-১৯৭৩\n খ) রাশেদুল হোসেন চৌধুরী, জন্ম - ০৫-১১-১৯৭৯\nগ) মিসেস রিফাত সাঈদ, জন্ম - ২৪-০৩-১৯৭৬\n৮। শিক্ষাগত যোগ্যতা: \n* এম,এ, রাষ্ট্র বিজ্ঞান, ঢাকা বিশ্ববিদ্যালয়\n* এম,এ, ইসলামের ইতিহাস ও সংস্কৃতি \n* এল,এল,বি \n* আই, মিউজিক, বাফা</string>

    <string name="personnel_list">কর্মকর্তাবৃন্দের তালিকা</string>


    <string name="exit_question">আপনি কি দুর্যোগ ব্যবস্থাপনা ও ত্রাণ মন্ত্রণালয় অ্যাপ্লিকেশন থেকে বের হতে চান?</string>
    <string name="yes">হ্যা</string>
    <string name="no">না</string>

    <string name="hello_blank_fragment3">This is the blank fragment 3</string>
    <string name="hello_blank_fragment4">This is the blank fragment 4</string>

    <string name="hello_blank_fragment5">This is the blank fragment 5</string>
    <string name="hello_blank_fragment6">This is the blank fragment 6</string>

    <string name="hello_blank_fragment7">This is the blank fragment 7</string>
    <string name="hello_blank_fragment0">This is the blank fragment 0</string>

    <string-array name="list_items">
        <item>প্রথম পাতা</item>
        <item>মাননীয় মন্ত্রী</item>
        <item>মন্ত্রণালয় সংক্রান্ত</item>
        <item>কর্মকর্তাবৃন্দ</item>
        <item>সামাজিক নিরাপত্তা</item>
        <item>মানবিক সহায়তা</item>
        <item>দুর্যোগ ঝুঁকি হ্রাস</item>
        <item>প্রকাশনাসমূহ</item>
        <item>সংস্থা ও কর্মসূচি</item>
        <item>ই-লাইব্রেরী</item>
        <!--item>কার্যালয় দেখুন</item-->
        <item>আমাদের সম্পর্কে</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_add_list</item>
        <item>@drawable/ic_add_list</item>
        <item>@drawable/ic_add_list</item>
        <item>@drawable/ic_add_list</item>
        <item>@drawable/ic_add_list</item>
        <item>@drawable/ic_add_list</item>
        <item>@drawable/ic_add_list</item>
        <item>@drawable/ic_add_list</item>
        <item>@drawable/ic_add_list</item>
        <item>@drawable/ic_add_list</item>
        <item>@drawable/ic_add_list</item>
        <!--item>@drawable/ic_add_list</item-->
    </array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_my_map">MyMapActivity</string>
</resources>